# easy-jvm

./: Cargo.toml
.github/workflows/: publish.yml
