[package]
name = "easy-jvm"
version = "0.1.0"
edition = "2021"
description = "A simple implementation of JVM for learning"
repository = "https://github.com/QXYang686/easy-jvm"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
